c_prototypes.h

void koota_min_integer8(void * invec, void * inoutvec, size_t len);
void koota_max_integer8(void * invec, void * inoutvec, size_t len);
void koota_sum_integer8(void * invec, void * inoutvec, size_t len);
void koota_prod_integer8(void * invec, void * inoutvec, size_t len);
void koota_band_integer8(void * invec, void * inoutvec, size_t len);
void koota_bor_integer8(void * invec, void * inoutvec, size_t len);
void koota_bxor_integer8(void * invec, void * inoutvec, size_t len);
void koota_land_integer8(void * invec, void * inoutvec, size_t len);
void koota_lor_integer8(void * invec, void * inoutvec, size_t len);
void koota_lxor_integer8(void * invec, void * inoutvec, size_t len);
void koota_min_integer16(void * invec, void * inoutvec, size_t len);
void koota_max_integer16(void * invec, void * inoutvec, size_t len);
void koota_sum_integer16(void * invec, void * inoutvec, size_t len);
void koota_prod_integer16(void * invec, void * inoutvec, size_t len);
void koota_band_integer16(void * invec, void * inoutvec, size_t len);
void koota_bor_integer16(void * invec, void * inoutvec, size_t len);
void koota_bxor_integer16(void * invec, void * inoutvec, size_t len);
void koota_land_integer16(void * invec, void * inoutvec, size_t len);